app/static/css/output.css
/* ... */
:is(.dark .dark\:border-neutral-600){
  --tw-border-opacity: 1;
  border-color: rgb(82 82 82 / var(--tw-border-opacity));
}

:is(.dark .dark\:border-primary-400){
  --tw-border-opacity: 1;
  border-color: rgb(143 174 224 / var(--tw-border-opacity));
}

:is(.dark .dark\:\!bg-neutral-600){
  --tw-bg-opacity: 1 !important;
  background-color: rgb(82 82 82 / var(--tw-bg-opacity)) !important;
}

:is(.dark .dark\:bg-dark){
  --tw-bg-opacity: 1;
  background-color: rgb(26 26 26 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-neutral-600){
  --tw-bg-opacity: 1;
  background-color: rgb(82 82 82 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-neutral-700){
  --tw-bg-opacity: 1;
  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-neutral-800){
  --tw-bg-opacity: 1;
  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-primary-600){
  --tw-bg-opacity: 1;
  background-color: rgb(48 97 175 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-transparent){
  background-color: transparent;
}

:is(.dark .dark\:bg-zinc-500){
  --tw-bg-opacity: 1;
  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-zinc-600\/50){
  background-color: rgb(82 82 91 / 0.5);
}

:is(.dark .dark\:bg-zinc-700){
  --tw-bg-opacity: 1;
  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
}

:is(.dark .dark\:bg-zinc-800){
  --tw-bg-opacity: 1;
  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
}

:is(.dark .dark\:fill-gray-400){
  fill: #9ca3af;
}

:is(.dark .dark\:\!text-primary-400){
  --tw-text-opacity: 1 !important;
  color: rgb(143 174 224 / var(--tw-text-opacity)) !important;
}

:is(.dark .dark\:text-black){
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-gray-200){
  --tw-text-opacity: 1;
  color: rgb(229 231 235 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-gray-300){
  --tw-text-opacity: 1;
  color: rgb(209 213 219 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-neutral-200){
  --tw-text-opacity: 1;
  color: rgb(229 229 229 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-neutral-300){
  --tw-text-opacity: 1;
  color: rgb(212 212 212 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-neutral-400){
  --tw-text-opacity: 1;
  color: rgb(163 163 163 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-primary-400){
  --tw-text-opacity: 1;
  color: rgb(143 174 224 / var(--tw-text-opacity));
}

:is(.dark .dark\:text-transparent){
  color: transparent;
}

:is(.dark .dark\:text-white){
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

:is(.dark .dark\:shadow-\[0_4px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.5\)\]){
  --tw-shadow: 0 4px 9px -4px rgba(59,113,202,0.5);
  --tw-shadow-colored: 0 4px 9px -4px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

:is(.dark .dark\:placeholder\:text-gray-200)::-moz-placeholder{
  --tw-text-opacity: 1;
  color: rgb(229 231 235 / var(--tw-text-opacity));
}

:is(.dark .dark\:placeholder\:text-gray-200)::placeholder{
  --tw-text-opacity: 1;
  color: rgb(229 231 235 / var(--tw-text-opacity));
}

:is(.dark .dark\:checked\:border-primary:checked){
  --tw-border-opacity: 1;
  border-color: rgb(59 113 202 / var(--tw-border-opacity));
}

:is(.dark .dark\:checked\:bg-primary:checked){
  --tw-bg-opacity: 1;
  background-color: rgb(59 113 202 / var(--tw-bg-opacity));
}

:is(.dark .dark\:hover\:\!bg-\[\#555\]:hover){
  --tw-bg-opacity: 1 !important;
  background-color: rgb(85 85 85 / var(--tw-bg-opacity)) !important;
}

:is(.dark .dark\:hover\:bg-neutral-500:hover){
  --tw-bg-opacity: 1;
  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
}

:is(.dark .dark\:hover\:bg-neutral-600:hover){
  --tw-bg-opacity: 1;
  background-color: rgb(82 82 82 / var(--tw-bg-opacity));
}

:is(.dark .dark\:hover\:bg-neutral-700:hover){
  --tw-bg-opacity: 1;
  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
}

:is(.dark .dark\:hover\:bg-white\/10:hover){
  background-color: rgb(255 255 255 / 0.1);
}

:is(.dark .dark\:hover\:fill-gray-100:hover){
  fill: #f3f4f6;
}

:is(.dark .dark\:hover\:text-\[\#3b71ca\]:hover){
  --tw-text-opacity: 1;
  color: rgb(59 113 202 / var(--tw-text-opacity));
}

:is(.dark .dark\:hover\:text-primary-400:hover){
  --tw-text-opacity: 1;
  color: rgb(143 174 224 / var(--tw-text-opacity));
}

:is(.dark .dark\:hover\:shadow-\[0_8px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.2\)\2c 0_4px_18px_0_rgba\(59\2c 113\2c 202\2c 0\.1\)\]:hover){
  --tw-shadow: 0 8px 9px -4px rgba(59,113,202,0.2),0 4px 18px 0 rgba(59,113,202,0.1);
  --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

:is(.dark .dark\:focus\:\!bg-\[\#555\]:focus){
  --tw-bg-opacity: 1 !important;
  background-color: rgb(85 85 85 / var(--tw-bg-opacity)) !important;
}

:is(.dark .dark\:focus\:bg-white\/10:focus){
  background-color: rgb(255 255 255 / 0.1);
}

:is(.dark .dark\:focus\:text-\[\#3b71ca\]:focus){
  --tw-text-opacity: 1;
  color: rgb(59 113 202 / var(--tw-text-opacity));
}

:is(.dark .dark\:focus\:text-primary-400:focus){
  --tw-text-opacity: 1;
  color: rgb(143 174 224 / var(--tw-text-opacity));
}

:is(.dark .dark\:focus\:shadow-\[0_8px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.2\)\2c 0_4px_18px_0_rgba\(59\2c 113\2c 202\2c 0\.1\)\]:focus){
  --tw-shadow: 0 8px 9px -4px rgba(59,113,202,0.2),0 4px 18px 0 rgba(59,113,202,0.1);
  --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
/* ... */

